--- a/src/app/componentes/plato/plato.component.scss
+++ b/src/app/componentes/plato/plato.component.scss
@@ -83,6 +83,27 @@ button{
   size-adjust:initial ;
 }
 
+.button-search{
+  background-color: rgb(58, 54, 54) !important;
+  font-size: small;
+}
+
+.search-style {
+  font-size: small;
+  margin-right: 5px;
+
+}
+
+ .maxWidthInput{
+   max-width: 15vw;
+ }
+
+.categorias{
+background-color: rgb(190, 154, 154);
+opacity: 70%;
+}
+
+
 
 
 
