--- a/src/app/componentes/reserva/reserva.component.scss
+++ b/src/app/componentes/reserva/reserva.component.scss
@@ -15,7 +15,7 @@
   background-size:cover;
   background-repeat: no-repeat;
   object-fit: contain;
-  background-image: url(../../../assets/img/platter-2009590_960_720.webp);
+  background-image: url(../../../assets/img/reserva.jpg);
 }
 
 button{
