--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
       </form>
     </div>
 
-    <div class="row">
+    <div class="row button-acceder">
       <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid" (click)="entrar()">Acceder</button>
     </div>
 
