--- a/src/app/componentes/plato/crear-plato/crear-plato.component.scss
+++ b/src/app/componentes/plato/crear-plato/crear-plato.component.scss
@@ -92,6 +92,8 @@ background-color: rosybrown !important;
 
 .button-crear{
   margin-bottom: 3%;
+  padding-left: 130px;
+  padding-right: 130px;
 }
 
 .file-input {
