--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -6,6 +6,7 @@
 
   a {
     text-decoration: none;
+    color: white;
   }
 }
 
@@ -30,6 +31,11 @@
   background-repeat: no-repeat;
   background-image: url(../../assets/img/salad-2068220_960_720.jpg);
   object-fit: contain;
+}
+
+.button-registrarse{
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 
