--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="row button-acceder">
-      <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid" (click)="entrar()">Acceder</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid" (click)="entrarClicked()">Acceder</button>
     </div>
 
     <div class="row mt-4 pb-2">
