div categorías posición fijada

--- a/src/app/componentes/plato/plato.component.html
+++ b/src/app/componentes/plato/plato.component.html
@@ -1,6 +1,7 @@
+<div class="main-component row">
 
-<div class="main-component">
-  <div class="row">
+  <!-- BUSQUEDA  -->
+  <!-- <div class="row">
     <div class="col-3"></div>
     <div class="col-3"></div>
     <div class="col-3"></div>
@@ -10,212 +11,164 @@
       </mat-form-field>
       <button type="button" style="width:70px;height:30px;" class="btn btn-secondary button-search">Buscar</button>
     </div>
+  </div> -->
+
+  <!-- DIV PLATOS -->
+  <div class="col-10">
+    <div class="row">
+
+      <div class="col-4">
+        <mat-card class="example-card">
+          <mat-card-header class="bg-card">
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Borsch</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/borsch2.JPG">
+          <mat-card-content class="bg-card">
+            <p >
+              La sabrosa y aromática sopa de remolacha llamada borsch.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+
+      </div>
+
+      <div class="col-4">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Varenyky</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/varenyki2.JPG">
+          <mat-card-content>
+            <p>
+              "Media lunas" rellenas de puré de patata, setas y requesón.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+      <div class="col-4">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Goulash</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/goulash1.JPG">
+          <mat-card-content>
+            <p>
+              Sopa de carne de buey con cebollas y páprica. Lorem ipsum dolor sit amet.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-4">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Borsch</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/borsch2.JPG">
+          <mat-card-content>
+            <p>
+              La sabrosa y aromática sopa de remolacha llamada borsch.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+      <div class="col-4">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Varenyky</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/varenyki2.JPG">
+          <mat-card-content>
+            <p>
+              "Media lunas" rellenas de puré de patata, setas y requesón.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+      <div class="col-4">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Goulash</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/goulash1.JPG">
+          <mat-card-content>
+            <p>
+              Sopa de carne de buey con cebollas y páprica. Lorem ipsum dolor sit amet.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+    </div>
   </div>
-  <!--    <div class="row">
-      <mat-toolbar class="bg-toolbar">
-        <span class="example-spacer"></span>
-        <input type="text" class="form-control maxWidthInput" placeholder="Buscar">
-        <button type="button" class="btn btn-secondary button-search">Buscar</button>
-      </mat-toolbar>
-    </div> -->
 
-  <div class="row">
-
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Borsch</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/borsch2.JPG">
-        <mat-card-content>
-          <p>
-            La sabrosa y aromática sopa de remolacha llamada borsch.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-
-   <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Varenyky</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/varenyki2.JPG">
-        <mat-card-content>
-          <p>
-            "Media lunas" rellenas de puré de patata, setas y requesón.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Goulash</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/goulash1.JPG">
-        <mat-card-content>
-          <p>
-            Sopa de carne de buey con cebollas y páprica.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <div class="col-3">
-      <mat-selection-list #categorias [multiple]="false">
-
-        <a class="nav-link categorias" routerLink="/plato">
-          <mat-list-option>
-            Ensaladas
-          </mat-list-option>
-        </a>
-
-        <a class="nav-link" routerLink="/crear-plato">
-          <mat-list-option>
-            Primeros
-          </mat-list-option>
-        </a>
-
-        <a class="nav-link" routerLink="/reserva">
-          <mat-list-option>
-            Segundos
-          </mat-list-option>
-        </a>
-
-        <a class="nav-link" routerLink="/reserva">
-          <mat-list-option>
-            Postres
-          </mat-list-option>
-        </a>
-
-      </mat-selection-list>
-    </div>
-
-
- <div class="col-3"></div> -->
-<!--
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Patata de la casa</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/patata1.JPG">
-        <mat-card-content>
-          <p>
-            Patatas de la huerta con salsa de mantequilla y eneldo.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Salmón a la plancha</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/salmon5.JPG">
-        <mat-card-content>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Borsch</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/goulash1.JPG">
-        <mat-card-content>
-          <p>
-            El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-       <div class="col-3"></div>
-
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Borsch</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/goulash1.JPG">
-        <mat-card-content>
-          <p>
-            El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-
-    <div class="col-3">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Borsch</mat-card-title>
-          <mat-card-subtitle>6.00€</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="../../../assets/img/goulash1.JPG">
-        <mat-card-content>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam porro quia.
-          </p>
-        </mat-card-content>
-        <mat-card-actions class="buttons-center">
-          <button mat-button>MODIFICAR</button>
-          <button mat-button>ELIMINAR</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>  -->
+  <!-- DIV CATEGORÍAS  -->
+  <div class="col-2 div-categorias">
+    <mat-selection-list #categorias [multiple]="false">
+      <a class="nav-link categorias" routerLink="/plato">
+        <mat-list-option>
+          ENSALADAS
+        </mat-list-option>
+      </a>
+      <a class="nav-link categorias" routerLink="/plato">
+        <mat-list-option>
+          PRIMEROS
+        </mat-list-option>
+      </a>
+      <a class="nav-link categorias" routerLink="/plato">
+        <mat-list-option>
+          SEGUNDOS
+        </mat-list-option>
+      </a>
+      <a class="nav-link categorias" routerLink="/plato">
+        <mat-list-option>
+          POSTRES
+        </mat-list-option>
+      </a>
+    </mat-selection-list>
   </div>
+
 </div>
