--- a/src/app/componentes/plato/plato.component.scss
+++ b/src/app/componentes/plato/plato.component.scss
@@ -1,8 +1,6 @@
 
 .main-component{
   position: relative;
-/*   display: flex; */
-
   height:100vh;
   max-width:100%;
   max-height: 100%;
@@ -11,44 +9,35 @@
   object-fit: contain;
   background-image: url(../../../assets/img/8P3A0330.jpg);
   overflow-x: hidden;
-
 }
-
-
-
-/* .card {
-  display:inline-block;
-  background-color: black;
-  opacity:70%;
-
-
-}
-
-a {
-  margin-left: 22px;
-  text-decoration: none;
-  color: white;
-}
-
-#precio {
-  margin-left: 160px;
-} */
 
 .example-card {
-  max-width: 300px;
+  max-width: 22vw;
   margin-top:9%;
-  margin-bottom: 5px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-bottom: 9%;
+  margin-left: 5%;
+ /*  padding-right: 5%;
+  padding-left: 5%; */
 /*   background-color: rgb(73, 65, 65); */
 /*   background-color: rgb(59, 53, 53); */
 /*   background-color: rgb(76, 69, 69); */
-  opacity: 95%;
+
+}
+
+.bg-card{
+ /*  background-color: rgb(58, 54, 54) !important; */
+  background-color: rgb(62, 60, 60) !important;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding-bottom: 5px;
+  padding-top:5px;
+  padding-left: 15px;
+  padding-right: 15px;
 
 }
 
 .example-header-image {
-  background-image: url(../../../assets/img/borsch-4260907_960_720.jpg);
+  background-image: url(../../../assets/img/img-platos.jpg);
   background-size: cover;
 }
 
@@ -59,49 +48,62 @@ p{
 
 .buttons-center{
   text-align: center;
+  margin-top:-15px;
 }
 
 button{
   background-color: rgb(59, 55, 55);
+  padding-top: 1px;
 }
 
-.maxWidthInput{
-  max-width: 15vw !important;
+.categorias{
+  background-color: rgb(58, 54, 54);
+  padding: 35px; // entre las categorías
+  opacity: 50%;
+  text-align: center;
+}
+.div-categorias{
+  max-width: 14vw;
+  position: relative;
+  display: block;
+  position: fixed;
+  right: 0;
+  left: auto;
+  margin-top: 3.5%;
+  margin-right: 2%;
+  margin-left: 5%;
+
 }
 
-.bg-toolbar{
-  background-color: darkgrey;
-}
+/* BUSQUEDA */
 
-
-.example-spacer {
-  flex: 1 1 auto;
-}
-
+/*
 .button-search{
   margin-left: 5px;
   size-adjust:initial ;
-}
+} */
 
-.button-search{
+/* .button-search{
   background-color: rgb(58, 54, 54) !important;
   font-size: small;
 }
-
-.search-style {
+ */
+/* .search-style {
   font-size: small;
   margin-right: 5px;
 
-}
+} */
 
- .maxWidthInput{
+/*  .maxWidthInput{
    max-width: 15vw;
- }
+ } */
 
-.categorias{
-background-color: rgb(190, 154, 154);
-opacity: 70%;
-}
+/*  .example-spacer {
+  flex: 1 1 auto;
+} */
+
+
+
 
 
 
