--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,57 +1,35 @@
 <mat-toolbar>
+  <!-- NOMBRE APP & ICONO -->
   <div class="header-style">
-    <span class="app-style">Solo siéntate</span>
+    <span class="app-style" routerLink="/inicio">Comedor App</span>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>restaurant</mat-icon>
     </button>
   </div>
   <span class="example-spacer"></span>
-<!--
-  <mat-form-field class="search-style" floatLabel="never">
-    <input matInput placeholder="">
-  </mat-form-field>
-  <button type="button" style="width:70px;height:30px;" class="btn btn-secondary button-search">Buscar</button> -->
 
-  <!--  <input type="text" class="form-control maxWidthInput" placeholder="Buscar">
-  <button type="button" class="btn btn-secondary button-search">Buscar</button>
-  <span class="example-spacer"></span> -->
-
-
+  <!-- USER AREA -->
   <div class="user-area">
-<!--     <button [disabled]="payloadArray.enabled != 'true' "mat-icon-button matTooltip="Area personal" class="example-icon favorite-icon"
-      aria-label="Example icon-button with heart icon">
-      <mat-icon>person</mat-icon>
-    </button> -->
+
+    <!-- en el caso si el usuario se ha logueado con éxito -->
+    <div class="user-logged" *ngIf="usuarioLogeado$ | async as usuario; else botonLogin">
+      {{usuario[0].email}}
+
+      <button mat-icon-button matTooltip="Area personal">
+        <mat-icon>person</mat-icon>
+      </button>
+
+      <button (click)="logoutClicked()" mat-icon-button matTooltip="Logout">
+        <mat-icon color="warn">power_settings_new</mat-icon>
+      </button>
+
+    </div>
 
 
-
-      <div *ngIf="usuarioLogeado$ | async as usuario; else botonLogin">
-        El nombre del usuario es: {{usuario[0].email}}
-
-        <button mat-icon-button matTooltip="Area personal">
-          <mat-icon>person</mat-icon>
-       </button>
-
-        <button (click)="logoutClicked()" mat-icon-button matTooltip="Logout" >
-          <mat-icon color="warn">power_settings_new</mat-icon>
-        </button>
-
-      </div>
-
-      <ng-template #botonLogin>
-        <button routerLink="/login" mat-icon-button matTooltip="Login">
-          <mat-icon color="">login</mat-icon>
-        </button>
-      </ng-template>
-
-
-
-<!--
-   <button mat-icon-button [disabled]="payloadArray.enabled != 'true' " color="primary" >
-    <mat-icon color="warn" style="cursor: pointer;" >delete</mat-icon>
- </button> -->
-
-
-
-
+<!-- (else) en el caso si el usuario NO se ha logueado con éxito  -->
+    <ng-template #botonLogin>
+      <button routerLink="/login" mat-icon-button matTooltip="Login">
+        <mat-icon color="">login</mat-icon>
+      </button>
+    </ng-template>
   </div>
