--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -75,4 +75,9 @@
       <span class="loginTitle"><a routerLink="/login">Login</a></span>
     </div>
   </div>
+
+
+  <!-- SPINNER -->
+<mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading$ | async"></mat-progress-spinner>
+
 </div>
