--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -48,9 +48,12 @@ mat-progress-spinner{
   position:absolute;
   top: 50%;
   left: 50%;
-  left: 50%;
+  right: 50%;
   transform: translate(-50%, -50%);
   z-index: 5;
 }
 
+/* .example-margin {
+  margin: 0 10px;
+} */
 
